objects/Case.object
<CustomObject><businessProcesses>
<fields>
        <fullName>SubStatus__c</fullName>
        <label>SubStatus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bug/Enhancement Submitted</fullName>
                </value>
                <value>
                    <fullName>Bug Fixed/Enhancement Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach</fullName>
                </value>
                <value>
                    <fullName>Closed by Customer</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Forwarded to Distributor</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>No License</fullName>
                </value>
                <value>
                    <fullName>No Maintenance</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Possible Workaround/Solution</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>To Be Called</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting For Future Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Waiting for Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>MATLAB</fullName>
                </value>
                <value>
                    <fullName>Math/Financial</fullName>
                </value>
                <value>
                    <fullName>Deployment/T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Installation (not use)</fullName>
                </value>
                <value>
                    <fullName>CDA/SPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sub_Topic__c</fullName>
        <label>Sub Topic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Topic__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;A</fullName>
                </value>
                <value>
                    <fullName>About Partner</fullName>
                </value>
                <value>
                    <fullName>Account/Contact Status</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Contact</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Activation Key</fullName>
                </value>
                <value>
                    <fullName>Activation Release</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Product</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Administrator Change</fullName>
                </value>
                <value>
                    <fullName>Asset Group</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>AUI &amp; Entitlements</fullName>
                </value>
                <value>
                    <fullName>Auto Invoice Response</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Book Program</fullName>
                </value>
                <value>
                    <fullName>Bookstore Return</fullName>
                </value>
                <value>
                    <fullName>Bridge to purchase</fullName>
                </value>
                <value>
                    <fullName>Cancellation/Reschedule</fullName>
                </value>
                <value>
                    <fullName>Certificate of Origin</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Classifications Required</fullName>
                </value>
                <value>
                    <fullName>Class Information</fullName>
                </value>
                <value>
                    <fullName>Close/Open</fullName>
                </value>
                <value>
                    <fullName>Cody Coursework</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Commission Change</fullName>
                </value>
                <value>
                    <fullName>Commission Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>SupportPackageName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Support Package</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Base_Code__c</field>
                <operation>equals</operation>
                <valueField>PRODUCT_SUPPRT__c.BASE_PRDCT__c</valueField>
            </filterItems>
            <infoMessage>Filtered by Product Base Code on Case</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PRODUCT_SUPPRT__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Support_Package_Code__c</fullName>
        <formula>SupportPackageName__r.CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Package Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Support_Package_Full_Name__c</fullName>
        <description>Product Support Package Full Name</description>
        <formula>SupportPackageName__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Package Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Support_Package_Release__c</fullName>
        <description>GR Release Name</description>
        <formula>SupportPackageName__r.GR_Release_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Package Release</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Support_Package_Version__c</fullName>
        <formula>SupportPackageName__r.VER_FULL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Package Version</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Support_Reason__c</fullName>
        <label>Support Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Support_Status__c</fullName>
        <label>Support Status</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory__c</fullName>
        <formula>IF( AccountId   &lt;&gt;  null,  Account.Territory__c,
IF( Opportunity__c &lt;&gt; null, Opportunity__r.Territory__c,
null
))</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Test_Email_Debug__c</fullName>
        <label>Test Email Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account/Contact</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Activation.</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Auctions</fullName>
                </value>
                <value>
                    <fullName>Auction Takedowns</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing/Orders</fullName>
                </value>
                <value>
                    <fullName>Billing-FedEx</fullName>
                </value>
                <value>
                    <fullName>Billing-Other</fullName>
                </value>
                <value>
                    <fullName>Billing-Tabs</fullName>
                </value>
                <value>
                    <fullName>Billing-UPS</fullName>
                </value>
                <value>
                    <fullName>BIS Cases</fullName>
                </value>
                <value>
                    <fullName>BSA Reviews</fullName>
                </value>
                <value>
                    <fullName>Cancellation/Reschedule</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Class Information</fullName>
                </value>
                <value>
                    <fullName>Commercial Invoice</fullName>
                </value>
                <value>
                    <fullName>Company Changes</fullName>
                </value>
                <value>
                    <fullName>Consulting Contracts</fullName>
                </value>
                <value>
                    <fullName>Contact Changes</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Database Updates</fullName>
                </value>
                <value>
                    <fullName>Discount Approval</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>ECCN</fullName>
                </value>
                <value>
                    <fullName>ECCN-Requests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MATLAB Mobile</fullName>
                </value>
                <value>
                    <fullName>PC Install</fullName>
                    <default>true</default>
                    <label>PC Install</label>
                </value>
                <value>
                    <fullName>MATLAB Online</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Ver_Command__c</fullName>
        <description>Input from the ver command field on My SR page provided by the customer</description>
        <inlineHelpText>My SR ver command provided the user</inlineHelpText>
        <label>Ver Command</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Ver_Errors_License_dat_Imdebug__c</fullName>
        <label>Output of Ver</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Version__c</fullName>
        <formula>Product_Lookup__r.Version__c</formula>
        <label>Version</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Warning__c</fullName>
        <formula>IF( (Account.Denied_Company__c = TRUE || Account.Export_Status__c  = "A" || Contact.Export_Prohibited_checkbox__c = TRUE ||  Contact.Denied_On_Watch_List_checkbox__c = TRUE ),
IMAGE ( "/img/samples/flag_red.gif", "True Image" ),""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warning</label>
        <type>Text</type>
    </fields><fields>
        <fullName>isSecured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to determine if the case attachments are secured or not</description>
        <label>isSecured</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>is_Individual_Account__c</fullName>
        <description>Field has been used on the New Opportunity button to prevent opportunity creation for individual accounts</description>
        <formula>IF( Account.Is_Individual_Account__c , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Individual Account</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>is_Partner_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if true if is a Case created as a result of a Partner Lead</description>
        <label>is Partner Lead</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ortoo_e2a__Thread_Id__c</fullName>
        <formula>"ref:"&amp;
LEFT( $Organization.Id , 4 )&amp;
IF( BEGINS(RIGHT($Organization.Id,11), '0000000'), RIGHT($Organization.Id,4),
IF( BEGINS(RIGHT($Organization.Id,11), '000000'), RIGHT($Organization.Id,5),
IF( BEGINS(RIGHT($Organization.Id,11), '00000'), RIGHT($Organization.Id,6),
IF( BEGINS(RIGHT($Organization.Id,11), '0000'), RIGHT($Organization.Id,7),
IF( BEGINS(RIGHT($Organization.Id,11), '000'), RIGHT($Organization.Id,8),
IF( BEGINS(RIGHT($Organization.Id,11), '00'), RIGHT($Organization.Id,9),
IF( BEGINS(RIGHT($Organization.Id,11), '0'), RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11)
)))))))
&amp;"."&amp;LEFT( Id , 4 )&amp;

IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), '00'), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), '0'), RIGHT(Id,10),
RIGHT(Id,11)
))))))) &amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllOpenCaseswithcaseorigin</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Area__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>SubStatus__c</columns>
        <columns>Siebel_SR__c</columns>
        <columns>Description_255__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterThan</operation>
            <value>2/12/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>ML_Desktop,ML_Web</value>
        </filters>
        <label>All Open Caseswithcaseorigin</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>CNX_All_Open_Cases</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SubStatus__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Escalation_to__c</columns>
        <columns>Description_255__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Natick - Connections,JP - Connections</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CNX</value>
        </filters>
        <label>CNX All Open Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_DE_CH_and_RAC_DE</fullName>
        <booleanFilter>1 and (2 OR 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/DE,CS/CH</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>RAC/DE</value>
        </filters>
        <label>CS/DE, CH and RAC/DE</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CS_DE_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Manager_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Rep_Report_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Bertrand_Dissler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Elena_Corso</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_DE_and_RAC_DE</fullName>
        <booleanFilter>1 and (2 OR 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/DE</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>RAC/DE</value>
        </filters>
        <label>CS/DE and RAC/DE</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CS_DE_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Manager_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Rep_Report_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Bertrand_Dissler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Elena_Corso</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_Distributor_Case_View</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Owner_Name__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Componentes,Figes,Gamax,Hirain,Humusoft,Mentor Hellas,Multion,ONT</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>OpenCaDD,Opti-Num,Softline,Systematics,Techsource,TeraSoft,World Express</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Natick - Customer Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>CS Distributor Case View</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_FR</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/FR</value>
        </filters>
        <label>CS / FR</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CS_Sykes_Rep</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_Natick</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/Na</value>
        </filters>
        <label>CS / Natick</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CS_Sykes_Rep</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Jason_Lee</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_Natick_for_WW_Coverage</fullName>
        <booleanFilter>(1 AND (2 OR (3 AND 4) OR (5 AND 6) ))</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Escalation_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/AU,CS/BN,CS/ES,CS/IT,CS/Na,CS/No,CS/UK,CS/CH,CS/FR</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>MathWorks Order #</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/IN</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>startsWith</operation>
            <value>DISTRIB</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <label>CS / Natick for WW Coverage</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CS_Manager_Susan_Gagnon</roleAndSubordinates>
            <roleAndSubordinatesInternal>CS_Natick_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CS_Natick_mailer_daemon_mw_only</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CS/Na</value>
        </filters>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>contains</operation>
            <value>mailer-daemon</value>
        </filters>
        <label>CS / Natick mailer-daemon@mw only</label>
        <sharedTo>
            <role>CS_Natick_Support_Manager</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>CT_AU</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CT/AU</value>
        </filters>
        <label>CT / AU</label>
        <language>en_US</language>
        <sharedTo>
            <role>MW_Customer_Support_Manager</role>
            <roleAndSubordinatesInternal>CS_Natick_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CT_CN</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CT/CN</value>
        </filters>
        <label>CT / CN</label>
        <language>en_US</language>
        <sharedTo>
            <role>MW_Customer_Support_Manager</role>
            <roleAndSubordinatesInternal>CS_Manager_Lina_Yang</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Natick_Support_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Rep_Report_Lina_Yang</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CT_EMEA</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CT/BN,CT/UK,CT/CH,CT/DE,CT/ES,CT/FR,CT/IT,CT/No,CT/EM</value>
        </filters>
        <label>CT / EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <role>RAC_Manager_Elena_Corso</role>
            <role>RAC_Rep_Report_Elena_Corso</role>
            <roleAndSubordinatesInternal>CS_Manager_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Natick_Support_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Rep_Report_Elena_Corso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MW_Customer_Support_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Manager_Asa_Welander</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RAC_Rep_Report_Asa_Welander</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>CT_IN</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Area__c</columns>
        <columns>Escalation_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Description_255__c</columns>
        <columns>SubStatus__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>List_View_Area__c</field>
            <operation>contains</operation>
            <value>CT/IN</value>
        </filters>
        <label>CT / IN</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CS_Manager_Kumar_Bakthavatchalu</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Natick_Support_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CS_Rep_Report_Kumar_Bakthavatchalu</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MW_Customer_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>    </validationRules></CustomObject>